[package]
name = "zanbaldwin-shuttlings"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["multipart"] }
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.7"
reqwest = { version = "0.11", features = ["rustls-tls"] }
image = "0.24"
ulid = { version = "1.1", features = ["uuid"] }
uuid = "1.7"
chrono = "0.4"
htmlentity = "1.3.1"
